Refactor code structure for improved readability and maintainability

--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -23,9 +23,9 @@
 
 ### 1.1.1 美しいソースコードの定義
 
-美しいソースコードとは、単に動作するだけではない。それは**拡張と保守がしやすいコード**である。ここでは、美しいソースコードの本質を次のように定義しよう。
+美しいソースコードとは、単に動作するだけではない。ここでは、美しいソースコードの本質を次のように定義しよう。
 
-> 「美しいソースコードとは、拡張と保守がしやすいコードである」
+> 「美しいソースコードとは、拡張と保守がしやすいコードでのことである」
 
 この定義は、ソフトウェア開発の現実を反映している。なぜなら、プログラミングとは単に一度動くものを作ることではなく、「拡張し保守する作業」だからである。
 
@@ -94,6 +94,7 @@
 ### 1.2.1 第一箇条:意図を表現
 
 #### 基本原則
+
 - **意図が表現されていること**
 - **意図の理解が容易であること**
 - **意図以外の記述が少ないこと**
@@ -101,6 +102,20 @@
 - **できれば、Why(なぜやるか)も記述されていること**
 
 #### 実践のポイント
+
+```csharp
+return a + b;
+```
+
+と
+
+```csharp
+var sum = a + b; return sum;
+```
+
+は、厳密にいうと意図が異なる記述である。
+
+前者は、「a + b を返す。」という意図を表現しているが、後者は「a + b を合計値とする。合計値を返す。」という意図を表現しており、微妙に意図が異なる。
 
 **人が人に話すように記述する**
 
@@ -165,8 +180,11 @@ return string.Join(", ", names);
 ### 1.2.2 第二箇条:単一責務
 
 #### 基本原則
+
 - **プログラムの単位が唯一の仕事を記述していること**
-- **その仕事がそのプログラム単位内で記述しつくされていること**(高凝集: high cohesion)
+- **その仕事がそのプログラム単位内で記述しつくされていること**
+
+この二つを満たすことを、**高凝集**(high cohesion)という。高凝集では、責務が単一であるだけでなく、その責務が他にできるだけ漏れていないことが大切である。
 
 #### 単一責務原則(SRP)の深い理解
 
@@ -1294,9 +1312,40 @@ public class AdvancedCustomerService
 
 これらは「**Testable**」な形で検証できるべきである。
 
-### 1.7.2 七箇条の習熟度評価
+「理解したかどうかを検証する方法」を持つことが重要である。
+
+**「分かっているか」の検証の例.**
+
+- 概念を説明できるか
+- メリット・デメリットを説明できるか
+- 意味のあるサンプル コードが書けるか
+- 実務に役立てられるか
+
+これらに加えて、分かっていない部分との切り分けができるかも、重要である。
+
+- 分かっていない部分がどこかを言語化できるか
+- 理解するための質問ができるか
+
+これらのテストケースを通ったら、「理解できた」ことにする、というものである。
+
+「分かる」という作業自体の最後の部分は、本人にしかできない。正解を告げれば分かれる訳ではない。正解を覚えるのと分かるのは別のことである。
+
+![「馬を水辺に連れて行くことはできても、水を飲ませることはできない」("You can lead a horse to water, but you can't make him drink.")](../Images/1.6.horse.png)
+
+例えば、見聞きしたことをその儘言えたとしても「理解している」とは限らない。説明を記憶することと理解することは割と別のことだと思う。オウムがオウム返しできても理解できてる訳じゃない。オウム返しで理解したかどうかは検証できない。
+
+プログラミング研修中。「判ろうとする人」は伸びるが、「正解を聞いて正解を覚える」タイプの学習をしてきた人は伸びが遅いような気もする。プログラミングは応用問題ばかりなので、一つの正解を覚えても、他に使えないのではまずい。
+
+「正解を覚える」タイプの人は、「どこかにある正解」を教えてもらうまで正解が分からない。それまでは「教わってないから知らない」。プログラマーの主な仕事はまだ書かれてないコードを作りだすことである。逆に既にあるコードはあまり書かなくても良い。「既に解かれた問題は解かなくて良い」という位のものなので、或る問題の解き方をまんま覚えるだけではなく、応用ができることが重要である。
+
+開発者に必要な学習は、正解を知ること、テキストに書いてある正解を覚えること、ではない。問題を見つけて、その問題を解くこと、であろう。
+
+![「魚を与えるのではなく、釣り方を教えよ」](../Images/1.6.fishing.png)
+
+### 1.6.7 七箇条の習熟度評価
 
 各プログラマが自分のスキルレベルを客観的に評価し、次のステップを明確にするための指針として、以下の評価表を活用できる:
+
 #### 七箇条の実践レベル評価表
 
 ##### レベル別チェックリスト
