--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -863,6 +863,16 @@ public class CustomerService
 }
 ```
 
+### 2.6.6 直訳で付ける
+
+プログラミングでは、英語を使うことが一般的であるが、型やメソッド、変数等の名前を英語で付けるときに、例えば、"大きさ"の意味を和英辞典で調べて"size"と書いてあったから"size"と付ける、みたいな安易なのは、あまりよろしくない。
+
+日本語と英語では、言葉の範囲が異なることがほとんどである。確かに、"大きさ"と"size"には意味の重なりがあるが、常に同じ意味で使えるわけではない。
+
+ニュアンスまで考えて意味が近いものを適切に選ぶ、のが良い。そのためには、英語を勉強することも必要になると思う。
+
+プログラミングを始めてから英語を復習するのはまだ楽だが、国語力がない人がプログラミングをマスターするのは結構大変である。プログラミングは、厳密に自分の語彙を作り、それで何をやるかを記述する、という作業だからである。
+
 ## 2.7 実践演習:効果的な命名技法
 
 ### 2.7.1 命名の段階的改善
