「分かる」ということの定義を明確化し、理解の検証方法を追加

--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -1303,30 +1303,21 @@ public class AdvancedCustomerService
 
 ### 1.6.6 「分かる」ということ
 
-学習の各段階で重要なのは、真に「分かる」ということである。「分かる」とは:
+学習の各段階で重要なのは、真に「分かる」ということである。
 
-1. **何が分かっていないかが分かる**:自分の知識の境界を認識する
-2. **他人に説明できる**:概念を自分の言葉で説明できる
-3. **現場で使える**:実際のプロジェクトで適用できる
-4. **応用できる**:新しい状況に適用できる
+「分かる」とは:
 
-これらは「**Testable**」な形で検証できるべきである。
-
-「理解したかどうかを検証する方法」を持つことが重要である。
-
-**「分かっているか」の検証の例.**
-
-- 概念を説明できるか
-- メリット・デメリットを説明できるか
-- 意味のあるサンプル コードが書けるか
-- 実務に役立てられるか
-
-これらに加えて、分かっていない部分との切り分けができるかも、重要である。
-
-- 分かっていない部分がどこかを言語化できるか
-- 理解するための質問ができるか
+1. **他人に説明できる**:概念を自分の言葉で説明できる
+2. **現場で使える**:実際のプロジェクトで適用できる
+3. **応用できる**:新しい状況に適用できる
+4. **何が分かっていないかが分かる**:自分の知識の境界を認識する
+5. **分かっていない部分を解決できる**:理解するための質問ができるか
 
 これらのテストケースを通ったら、「理解できた」ことにする、というものである。
+これらが「**Testable**」な形で検証できるのが良い。
+「理解したかどうかを検証する方法」を持つことが重要である。
+
+また、分かっていない部分との切り分けができ、分かっていない部分への対処ができるることも、重要である。
 
 「分かる」という作業自体の最後の部分は、本人にしかできない。正解を告げれば分かれる訳ではない。正解を覚えるのと分かるのは別のことである。
 
