--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -1305,6 +1305,8 @@ public class AdvancedCustomerService
 
 学習の各段階で重要なのは、真に「分かる」ということである。
 
+#### 「分かる」をTestableに
+
 「分かる」とは:
 
 1. **他人に説明できる**:概念を自分の言葉で説明できる
@@ -1322,8 +1324,9 @@ public class AdvancedCustomerService
 「分かる」という作業自体の最後の部分は、本人にしかできない。正解を告げれば分かれる訳ではない。正解を覚えるのと分かるのは別のことである。
 
 ![「馬を水辺に連れて行くことはできても、水を飲ませることはできない」("You can lead a horse to water, but you can't make him drink.")](../Images/1.6.horse.png)
+**「馬を水辺に連れて行くことはできても、水を飲ませることはできない」("You can lead a horse to water, but you can't make him drink.")**
 
-例えば、見聞きしたことをその儘言えたとしても「理解している」とは限らない。説明を記憶することと理解することは割と別のことだと思う。オウムがオウム返しできても理解できてる訳じゃない。オウム返しで理解したかどうかは検証できない。
+例えば、見聞きしたことをその儘言えたとしても「理解している」とは限らない。説明を記憶することと理解することは割と別のことだと思う。オウムがオウム返しできても理解できてる訳ではない。オウム返しで理解したかどうかは検証できない。
 
 プログラミング研修中。「判ろうとする人」は伸びるが、「正解を聞いて正解を覚える」タイプの学習をしてきた人は伸びが遅いような気もする。プログラミングは応用問題ばかりなので、一つの正解を覚えても、他に使えないのではまずい。
 
@@ -1332,6 +1335,17 @@ public class AdvancedCustomerService
 開発者に必要な学習は、正解を知ること、テキストに書いてある正解を覚えること、ではない。問題を見つけて、その問題を解くこと、であろう。
 
 ![「魚を与えるのではなく、釣り方を教えよ」](../Images/1.6.fishing.png)
+**「授人以魚 不如授人以漁」by 老子(「魚を与えるのではなく、釣り方を教えよ」、Give me a fish and I will eat today; teach me to fish and I will eat all my life.)**
+
+#### 問題を「分かる」
+
+問題が分からないと解けない。
+「いまいちうまくいかない」は、問題が特定できてないのである。
+
+>"It isn't that they can't see the solution.
+>It is that they can't see the problem."
+>「解決策が分らないのではない。問題が分っていないのだ」
+>G.K.チェスタトン
 
 ### 1.6.7 七箇条の習熟度評価
 
