リファクタリングを実施し、コマンドパターンを導入して図形追加処理を抽象化しました。また、クラス図を追加して設計を明確化しました。

--- a/MarkDown/第7章_リファクタリングと継続的品質改善.md
+++ b/MarkDown/第7章_リファクタリングと継続的品質改善.md
@@ -119,7 +119,7 @@ public class AddLineCommand : Command
     Point firstPoint;
 
     public override void OnDragStart(Model model, Point location) => firstPoint = location;
-    public override void OnDragEnd(Model model, Point location)
+    public override void OnDragEnd  (Model model, Point location)
         => model.Add(new LineFigure(Start: firstPoint, End: location));
 }
 
@@ -148,14 +148,44 @@ public class Controller
 }
 ```
 
+```mermaid
+classDiagram
+    class Controller {
+        +Command Command
+        +Model Model
+        +MouseDown(Point location)
+        +MouseUp(Point location)
+    }
+    class Command {
+        <<abstract>>
+        +OnDragStart(Model model, Point location)
+        +OnDragEnd(Model model, Point location)
+    }
+    class AddLineCommand {
+        +OnDragStart(Model model, Point location)
+        +OnDragEnd(Model model, Point location)
+    }
+    class AddRectangleCommand {
+        +OnDragStart(Model model, Point location)
+        +OnDragEnd(Model model, Point location)
+    }
+    class SelectCommand {
+        +OnDragEnd(Model model, Point location)
+    }
+    Controller --> Command
+    Command <|-- AddLineCommand
+    Command <|-- AddRectangleCommand
+    Command <|-- SelectCommand
+```
+
 更に図形の追加処理を抽象化してみる:
 
 _[C#]_
 ```csharp
 public abstract class Command
 {
-    public virtual void OnDragStart(Model model, Point location) { }
-    public virtual void OnDragEnd(Model model, Point location) { }
+    public virtual void OnDragStart(Model model, Point location) {}
+    public virtual void OnDragEnd  (Model model, Point location) {}
 }
 
 public abstract class Add2PointFigureCommand : Command
@@ -163,7 +193,7 @@ public abstract class Add2PointFigureCommand : Command
     Point firstPoint;
 
     public override void OnDragStart(Model model, Point location) => firstPoint = location;
-    public override void OnDragEnd(Model model, Point location) => model.Add(CreateFigure(firstPoint, location));
+    public override void OnDragEnd  (Model model, Point location) => model.Add(CreateFigure(firstPoint, location));
 
     protected abstract Figure CreateFigure(Point point1, Point point2);
 }
@@ -194,6 +224,41 @@ public class Controller
     public void MouseDown(Point location) => Command.OnDragStart(Model, location);
     public void MouseUp  (Point location) => Command.OnDragEnd  (Model, location);
 }
+```
+
+```mermaid
+classDiagram
+    class Controller {
+        +Command Command
+        +Model Model
+        +MouseDown(Point location)
+        +MouseUp(Point location)
+    }
+    class Command {
+        <<abstract>>
+        +OnDragStart(Model model, Point location)
+        +OnDragEnd(Model model, Point location)
+    }
+    class Add2PointFigureCommand {
+        <<abstract>>
+        +OnDragStart(Model model, Point location)
+        +OnDragEnd(Model model, Point location)
+        #CreateFigure(Point point1, Point point2)
+    }
+    class AddLineCommand {
+        +CreateFigure(Point point1, Point point2)
+    }
+    class AddRectangleCommand {
+        +CreateFigure(Point point1, Point point2)
+    }
+    class SelectCommand {
+        +OnDragEnd(Model model, Point location)
+    }
+    Controller --> Command
+    Command <|-- Add2PointFigureCommand
+    Add2PointFigureCommand <|-- AddLineCommand
+    Add2PointFigureCommand <|-- AddRectangleCommand
+    Command <|-- SelectCommand
 ```
 
 リファクタリングなので、まだ機能は増えていない。
