マルチパラダイムプログラミングの章において、オブジェクト指向と関数型プログラミングの具体例を追加し、関心の分離を強調するためにコードをリファクタリングしました。

--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -155,7 +155,182 @@ public static class StringProcessor
 }
 ```
 
+例えば、分割攻略(Divide and Conquer)について考えてみよう。
+
+次に、オブジェクト指向で、条件に合った社員一覧を表示するプログラムの例をあげる:
+
+_[C#]_
+```csharp
+using System;
+using System.Collections;
+
+class Staff
+{
+    public int    Number { get; init; }
+    public string Name   { get; init; } = "";
+}
+
+class StaffList : IEnumerable<Staff>
+{
+    LinkedList<Staff> staffs = new();
+
+    public void Add(Staff staff) => staffs.AddLast(staff);
+
+    public IEnumerator<Staff> GetEnumerator() => staffs.GetEnumerator();
+    IEnumerator IEnumerable.GetEnumerator() => GetEnumerator();
+}
+
+class StaffListView
+{
+    // 氏名が部分一致または番号が完全一致した社員を番号順に表示
+    public void Show(StaffList staffList, string condition)
+    {
+        var staffs = staffList.ToList();
+        staffs.Sort((staff1, staff2) => staff1.Number.CompareTo(staff2.Number));
+
+        foreach (var staff in staffs) {
+            if (staff.Name.Contains(condition) || staff.Number.ToString().Equals(condition))
+                Show(staff);
+        }
+
+        static void Show(Staff staff) => Console.WriteLine($"{staff.Name}({staff.Number})");
+    }
+}
+
+class Program
+{
+    StaffList staffList = new() {
+            new Staff { Number = 108, Name = "Jennifer Anderson" },
+            new Staff { Number = 109, Name = "James Taylor"      },
+            new Staff { Number = 103, Name = "Michael Brown"     },
+            new Staff { Number = 110, Name = "Maria Rodriguez"   },
+            new Staff { Number = 102, Name = "Jennifer Johnson"  },
+            new Staff { Number = 105, Name = "David Brown"       },
+            new Staff { Number = 106, Name = "Lisa Garcia"       },
+            new Staff { Number = 101, Name = "James Brown"       },
+            new Staff { Number = 104, Name = "Sarah Wilson"      },
+            new Staff { Number = 107, Name = "Robert Martinez"   }
+        };
+    StaffListView staffListView = new();
+
+    void Run()
+    {
+        for (; ;) {
+            var condition = GetLine("Condition");
+            staffListView.Show(staffList, condition);
+        }
+
+        static string GetLine(string message)
+        {
+            Console.Write($"{message}:");
+            return Console.ReadLine() ?? "";
+        }
+    }
+
+    static void Main() => new Program().Run();
+}
+```
+
+```
+実行結果:
+>Condition:101
+>James Brown(101)
+>Condition:Brown
+>James Brown(101)
+Michael Brown(103)
+>David Brown(105)
+>Condition:
+```
+
+StaffListView.Show() メソッドに注目してほしい。
+
+並べ替えとフィルタリングと表示の3つの関心事が混ざったメソッドになってしまっている。
+関心の分離がうまくいっていない。
+
+関数型プログラミングの要素を導入してみよう。
+
+_[C#]_
+```csharp
+using System;
+using System.Collections;
+using System.Linq;
+
+static class EnumerableExtensions
+{
+    public static void ForEach<TElement>(this IEnumerable<TElement> @this, Action<TElement> action)
+    {
+        foreach (var item in @this)
+            action(item);
+    }
+}
+
+class Staff
+{
+    public int    Number { get; init; }
+    public string Name   { get; init; } = "";
+}
+
+class StaffList : IEnumerable<Staff>
+{
+    LinkedList<Staff> staffs = new();
+
+    public void Add(Staff staff) => staffs.AddLast(staff);
+
+    public IEnumerator<Staff> GetEnumerator() => staffs.GetEnumerator();
+    IEnumerator IEnumerable.GetEnumerator() => GetEnumerator();
+}
+
+class Program
+{
+    StaffList staffList = new() {
+            new Staff { Number = 108, Name = "Jennifer Anderson" },
+            new Staff { Number = 109, Name = "James Taylor"      },
+            new Staff { Number = 103, Name = "Michael Brown"     },
+            new Staff { Number = 110, Name = "Maria Rodriguez"   },
+            new Staff { Number = 102, Name = "Jennifer Johnson"  },
+            new Staff { Number = 105, Name = "David Brown"       },
+            new Staff { Number = 106, Name = "Lisa Garcia"       },
+            new Staff { Number = 101, Name = "James Brown"       },
+            new Staff { Number = 104, Name = "Sarah Wilson"      },
+            new Staff { Number = 107, Name = "Robert Martinez"   }
+        };
+
+    void Run()
+    {
+        for (; ;) {
+            var condition = GetLine("Condition");
+
+            // 氏名が部分一致または番号が完全一致した社員を番号順に表示
+            staffList.Where(staff => staff.Name.Contains(condition) || staff.Number.ToString().Equals(condition))
+                        .OrderBy(staff => staff.Number)
+                        .Select(staff => $"{staff.Name}({staff.Number})")
+                        .ForEach(staffView => Console.WriteLine(staffView));
+        }
+
+        static string GetLine(string message)
+        {
+            Console.Write($"{message}:");
+            return Console.ReadLine() ?? "";
+        }
+    }
+
+    static void Main() => new Program().Run();
+}
+```
+
+次のそれぞれのメソッドがそれぞれの関心事を担っている:
+
+- OrderBy() : コレクションの並べ替え
+- Where() : コレクションのフィルタリング
+- Select() : コレクションの各要素の変換
+- ForEach() : コレクションの各要素への処理
+
+オブジェクト指向だけでは、複数の関心事が直交するような場合、すなわち横断的関心事があるような場合に、関心の分離が思うようにいかないことがある。
+
+関数型プログラミングを組み合わせて、マルチパラダイムにすることで、うまくいくことがある。
+
 #### C# 7.0-12.0: さらなるマルチパラダイム化
+
 _[C#]_
 ```csharp
 // C# 現代版:パターンマッチング、レコード、関数型構文
