分割攻略の説明を追加し、オブジェクト指向の特徴についての記述を強化しました。

--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -155,7 +155,13 @@ public static class StringProcessor
 }
 ```
 
-例えば、分割攻略(Divide and Conquer)について考えてみよう。
+ここで、分割攻略(Divide and Conquer)について考えてみよう。
+
+分割攻略(Divide and Conquer)では、問題を切り分けるることで、複雑さを回避し、問題を解きやすくする。プログラミングの場合、プログラムを分割する。
+
+パラダイムによって、この分割の仕方に特徴がある。
+
+オブジェクト指向は、プログラムをクラスに分割しカプセル化するところに特徴がある。ただ、この分割方法は、必ずしもどんな場合にも有効なわけではない。
 
 次に、オブジェクト指向で、条件に合った社員一覧を表示するプログラムの例をあげる:
 
