リファクタリングを実施し、コードの可読性を向上させました。外部からの動作は変更なし。

--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -239,13 +239,13 @@ class Program
 
 ```
 実行結果:
->Condition:101
->James Brown(101)
->Condition:Brown
->James Brown(101)
+Condition:101
+James Brown(101)
+Condition:Brown
+James Brown(101)
 Michael Brown(103)
->David Brown(105)
->Condition:
+David Brown(105)
+Condition:
 ```
 
 StaffListView.Show() メソッドに注目してほしい。
