--- a/MarkDown/第7章_リファクタリングと継続的品質改善.md
+++ b/MarkDown/第7章_リファクタリングと継続的品質改善.md
@@ -261,7 +261,7 @@ classDiagram
     Command <|-- SelectCommand
 ```
 
-リファクタリングなので、まだ機能は増えていない。
+リファクタリングなので、まだ機能は増えていない。リファクタリング前と外から見た動きは同じである。
 
 だが、このリファクタリングをしておくと、次に楕円の追加コマンドを機能追加するときに、Controller部に追記するコードは下記の部分だけとなる:
 
@@ -275,8 +275,7 @@ public class AddEllipseCommand : Add2PointFigureCommand
 }
 ```
 
-![MiniCad](../Images/7.minicad.2.png)
-
+![MiniCad](../Images/7.minicad.3.png)
 
 ---
 
