--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -220,7 +220,7 @@ public class Employee
 }
 ```
 
-この例では、従業員クラスが3つの異なる責務を持っている:
+この例では、従業員クラスが三つの異なる責務を持っている:
 1. 給与計算のロジック
 2. データ永続化の方法
 3. レポート生成の形式
