--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -36,7 +36,7 @@
 - × 2100/02/29
 - ○ 2000/02/29
 
-1つ目のプログラムは、こんな感じである。
+一つ目のプログラムは、こんな感じである。
 
 例 1. 「日付チェック (1)」
 
@@ -76,7 +76,7 @@ ChkFunc2(y, m, d);
 
 どうだろうか? 意図がシンプルに表現されているだろうか?
 
-2つ目のプログラムを見てみよう。
+二つ目のプログラムを見てみよう。
 
 例 2. 「日付チェック (2)」
 
@@ -245,7 +245,7 @@ public class OrderProcessor
 時間とともにソフトウェアのエントロピーは増大する傾向にある。
 ![時間とともにソフトウェアのエントロピーは増大](../Images/2.3.nameandconquer.1.svg)
 
-ソフトウェア開発の複雑さに対処するための基本戦略は2つある:
+ソフトウェア開発の複雑さに対処するための基本戦略は二つある:
 
 1. **Divide and Conquer(分割攻略)**:大きな問題を小さな問題に分割する
 2. **Name and Conquer(定義攻略)**:注目すべきものを見つけて名前を付ける
