--- a/MarkDown/第3章_モデリングとしてのプログラミング.md
+++ b/MarkDown/第3章_モデリングとしてのプログラミング.md
@@ -29,7 +29,7 @@
 
 ソフトウェア開発の**モデル**も似ている。例えば、設計モデルは、ソフトウェア開発全般から、ある視点で設計に関する部分だけを取り出したものである。分析モデルも同様である。
 
-1つ例を挙げると、「社員名簿アプリケーション」を作るとする。そして、その中で社員を表す「社員クラス」というのがモデリングされたとする。このとき、「社員クラス」が持っている属性は、現実の社員が持っとる情報のほんの一部である。現実の社員が、「好きな食べ物」「好みの音楽」「好きなスポーツ」のような情報を持っとったとしても、そのシステムのユーザーの視点からそれらの情報が不要だとしたら、「社員クラス」には入れないだろう。
+一つ例を挙げると、「社員名簿アプリケーション」を作るとする。そして、その中で社員を表す「社員クラス」というのがモデリングされたとする。このとき、「社員クラス」が持っている属性は、現実の社員が持っとる情報のほんの一部である。現実の社員が、「好きな食べ物」「好みの音楽」「好きなスポーツ」のような情報を持っとったとしても、そのシステムのユーザーの視点からそれらの情報が不要だとしたら、「社員クラス」には入れないだろう。
 
 つまり、関心の外のものを取り去ってシンプルにしたものが**モデル**である。
 
@@ -65,7 +65,7 @@ class 線分追加コマンド
 
 「線分追加コマンド」の例でいうと「線分追加コマンド」と名前が座ったことで、このクラスの概念や責務の範囲が腰を据える。それゆえ、「名前付け」いうのは、大切なモデリングなのである。
 
-それからもう1つ。「頭の中にある『それ』をどう呼ぶようにするか」を決めるということは、自分の中にしかなかった、ある関心の範囲の概念、つまり暗黙知でしかなかった概念を、他人にも分かるようにする、つまり形式知化する作業なのである。
+それからもう一つ。「頭の中にある『それ』をどう呼ぶようにするか」を決めるということは、自分の中にしかなかった、ある関心の範囲の概念、つまり暗黙知でしかなかった概念を、他人にも分かるようにする、つまり形式知化する作業なのである。
 
 「線分追加コマンド」の例でいうと、「線分追加コマンド」という名前がないうちは、その概念を他人に伝えるのは困難なことなのである。名前が決まって初めてコミュニケーションに使える。つまり、これはコミュニケーションのためのモデリングである、ということもできる。
 
