--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -250,7 +250,7 @@ Condition:
 
 StaffListView.Show() メソッドに注目してほしい。
 
-並べ替えとフィルタリングと表示の3つの関心事が混ざったメソッドになってしまっている。
+並べ替えとフィルタリングと表示の三つの関心事が混ざったメソッドになってしまっている。
 関心の分離がうまくいっていない。
 
 関数型プログラミングの要素を導入してみよう。
