--- a/MarkDown/第7章_リファクタリングと継続的品質改善.md
+++ b/MarkDown/第7章_リファクタリングと継続的品質改善.md
@@ -100,7 +100,7 @@ public class Controller
 
 ![MiniCad](../Images/7.minicad.2.png)
 
-いい感じだ。しかし、これからどんどんコマンド(処理)の種類が増えていくと、コードの複雑化が起きそうである。複雑化しそうなswitch - caseが2つもあるし、一部のコマンドでしか使用しないフィールドfirstPointがあるのも気持ち悪い。
+いい感じだ。しかし、これからどんどんコマンド(処理)の種類が増えていくと、コードの複雑化が起きそうである。複雑化しそうなswitch - caseが二つもあるし、一部のコマンドでしか使用しないフィールドfirstPointがあるのも気持ち悪い。
 
 リファクタリングして、今後のコマンドの追加に耐えうる設計に変えてみよう。
 
