--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -1140,7 +1140,7 @@ public class OrderService
             throw new ArgumentNullException(nameof(order));
 
         if (order.Items == null || !order.Items.Any())
-            throw new ArgumentException("注文には最低1つの商品が必要です", nameof(order));
+            throw new ArgumentException("注文には最低一つの商品が必要です", nameof(order));
 
         if (order.TotalAmount <= 0)
             throw new ArgumentException("注文金額は正の値である必要があります", nameof(order));
@@ -1594,7 +1594,7 @@ public class DataProcessorComparison
 
 | 原則 | チェック項目 | 対策 |
 |------|-------------|------|
-| **単一責務** | 1つのことだけをしているか | クラス/メソッドの分離 |
+| **単一責務** | 一つのことだけをしているか | クラス/メソッドの分離 |
 | **命名適切性** | 意図が伝わる名前か | SON原則の適用 |
 | **テスト可能性** | テストしやすいか | 依存性の注入、モック化 |
 
