--- a/MarkDown/第9章_チーム開発における品質管理.md
+++ b/MarkDown/第9章_チーム開発における品質管理.md
@@ -334,7 +334,7 @@ class UserService:
         Raises:
             ValidationError: 入力データが無効な場合
         """
-        # 1つのメソッドは1つの責務のみ
+        # 一つのメソッドは一つの責務のみ
         self._validate_user_data(user_data)
 
         # 早期リターンでネストを浅く
@@ -1220,7 +1220,7 @@ _[YAML]_
 code_review_process:
   preparation:
     - name: "Small Pull Requests"
-      description: "1つのPRは300行以下に制限"
+      description: "一つのPRは300行以下に制限"
       enforcement: "自動チェック"
 
     - name: "Self Review First"
