--- a/MarkDown/表紙.md
+++ b/MarkDown/表紙.md
@@ -1,6 +1,6 @@
-# 美しいコードの原則 — 意図を伝える設計と実践
+# AI時代の美しいプログラムの教科書
+〜20年間Microsoft MVPとして教えてきたプログラミング〜
 
-～AI時代だからこそ～
 (C#/Java/JavaScript/Python などによるサンプル コード付き)
 
-![美しいコードの原則 — 意図を伝える設計と実践 ～AI時代だからこそ～ C#/Java/JavaScript/Python などによるサンプル コード付き](../Images/cover.png)
+![AI時代の美しいプログラムの教科書 〜20年間Microsoft MVPとして教えてきたプログラミング〜](../Images/cover.png)
